# VLAInstructions

./: .gitignore  README.md
src/vla_rules_demo/: CMakeLists.txt  package.xml
src/vla_rules_demo/config/: demo_params.yaml
src/vla_rules_demo/launch/: demo.launch.py
src/vla_rules_demo/src/: arm_executor.cpp  fake_vla_stub.cpp
src/vla_rules_demo/worlds/: table_objects.sdf
